fixed zooming into input on mobile safari

--- a/css/app.css
+++ b/css/app.css
@@ -57,3 +57,9 @@
 .fade.ng-leave-active {
     opacity: 0;
 }
+
+input[type='text'],
+input[type='number'],
+textarea {
+  font-size: 16px;
+}
